@@ -16,6 +16,11 @@ Revision History:
  2-Apr-2003
 Acknowledgments:
     Thanks to Sergey Bondarenko for supplying a test for getElementsByTagName
+    Thanks to Andrew Bickerton for showing how to handle responses with content-length 0
+
+Problems Fixed:
+    1. HttpUnit was delaying until a timeout when a zero-length response was received
+
 Additions:
     1. Added support for getElementsByTagName to Document and Form
 
